# mysnippet

./: .gitignore  README.md
c/: 20111111.c  printf.c
c/linux/kernel/module/chrdev/: Makefile  chrdev.c
c/linux/kernel/module/template/: Makefile  hello.c
cmake/executable/: .clang-format  CMakeLists.txt  Makefile  conanfile.txt
cmake/executable/benchmarks/: demo.cpp
cmake/executable/include/: version.h.in
cmake/executable/src/: main.cpp
cmake/executable/tests/: demo.cpp
go/: cmd.go  error.go  main.go
jxa/: app.scpt  keystroke.scpt  terminal.scpt
lua/: object.lua
python/: argparse_example.py  server.py
python/GUI/TrayIcon/: wxTrayIcon.py
